--- a/themes/ace/layout/_partial/footer.ejs
+++ b/themes/ace/layout/_partial/footer.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
-                <% if (theme.RSS) { %>
+                    <% if (theme.RSS) { %>
                     <li>
                         <a href="<%= config.root + 'feed.xml' %>">
                             <span class="fa-stack fa-lg">
@@ -13,8 +13,8 @@
                             </span>
                         </a>
                     </li>
-                <% } %>
-                <% if (theme.twitter_username) { %>
+                    <% } %>
+                    <% if (theme.twitter_username) { %>
                     <li>
                         <a target="_blank" href="https://twitter.com/<%= theme.twitter_username %>">
                             <span class="fa-stack fa-lg">
@@ -23,8 +23,8 @@
                             </span>
                         </a>
                     </li>
-                <% } %>
-                <% if (config.zhihu_username) { %>
+                    <% } %>
+                    <% if (config.zhihu_username) { %>
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/<%= config.zhihu_username %>">
                             <span class="fa-stack fa-lg">
@@ -33,9 +33,9 @@
                             </span>
                         </a>
                     </li>
-                <% } %>
+                    <% } %>
 
-                <% if (theme.weibo_username) { %>
+                    <% if (theme.weibo_username) { %>
                     <li>
                         <a target="_blank" href="http://weibo.com/<%= theme.weibo_username %>">
                             <span class="fa-stack fa-lg">
@@ -44,9 +44,9 @@
                             </span>
                         </a>
                     </li>
-                <% } %>
+                    <% } %>
 
-                <% if (theme.facebook_username) { %>
+                    <% if (theme.facebook_username) { %>
                     <li>
                         <a target="_blank" href="https://www.facebook.com/<%= theme.facebook_username %>">
                             <span class="fa-stack fa-lg">
@@ -55,34 +55,34 @@
                             </span>
                         </a>
                     </li>
-                <% } %>
+                    <% } %>
 
-                <% if (theme.github_username) { %>
+                    <% if (theme.github_username) { %>
                     <li>
-                        <a target="_blank"  href="https://github.com/<%= theme.github_username %>">
+                        <a target="_blank" href="https://github.com/<%= theme.github_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
-                <% } %>
+                    <% } %>
 
-                <% if (theme.linkedin_username) { %>
+                    <% if (theme.linkedin_username) { %>
                     <li>
-                        <a target="_blank"  href="https://www.linkedin.com/in/<%= config.linkedin_username %>">
+                        <a target="_blank" href="https://www.linkedin.com/in/<%= config.linkedin_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
-                <% } %>
+                    <% } %>
 
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; <%= config.author %> <%= new Date().getFullYear() %> 
-                    <br>
+                    Copyright &copy; <%= config.author %> <%= new Date().getFullYear() %>
+                    <!-- <br>
                     Powered by <a href="http://www.hexo.io">Hexo</a> 
                     <span style="display: inline-block; margin: 0 5px;">
                         <i class="fa fa-heart"></i>
@@ -97,7 +97,7 @@
 					<% } %>
 					<% if (theme['enable_leancounter']) {%>
 					<i class="fa fa-eye" id="leancounter"></i>
-					<% } %>
+					<% } %> -->
                 </p>
             </div>
         </div>
@@ -106,37 +106,37 @@
 
 <!-- jQuery -->
 <% if (theme['jquery_CDN']) {%>
-   <%- js(theme['jquery_CDN']) %>
+<%- js(theme['jquery_CDN']) %>
 <% }else{ %>
-   <%- js('js/jquery.min.js') %>
+<%- js('js/jquery.min.js') %>
 <% } %>
 
 
 <!-- Bootstrap Core JavaScript -->
 <% if (theme['bootstrapJS_CDN']) {%>
-   <%- js(theme['bootstrapJS_CDN']) %>
+<%- js(theme['bootstrapJS_CDN']) %>
 <% }else{ %>
-   <%- js('js/bootstrap.min.js') %>
+<%- js('js/bootstrap.min.js') %>
 <% } %>
 
 <!-- Custom Theme JavaScript -->
 <%- js('js/hux-blog.min.js') %>
 
 <% if (theme.particle_bg) {%>
-	<%- js('js/particles.js') %>
-	<%- js('js/particles_config.js') %>
+<%- js('js/particles.js') %>
+<%- js('js/particles_config.js') %>
 <% } %>
 
 
 <!-- async load function -->
 <script>
     function async(u, c) {
-      var d = document, t = 'script',
-          o = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-      o.src = u;
-      if (c) { o.addEventListener('load', function (e) { c(null, e); }, false); }
-      s.parentNode.insertBefore(o, s);
+        var d = document, t = 'script',
+            o = d.createElement(t),
+            s = d.getElementsByTagName(t)[0];
+        o.src = u;
+        if (c) { o.addEventListener('load', function (e) { c(null, e); }, false); }
+        s.parentNode.insertBefore(o, s);
     }
 </script>
 
@@ -162,11 +162,11 @@
 <!-- jquery.tagcloud.js -->
 <script>
     // only load tagcloud.js in tag.html
-    if($('#tag_cloud').length !== 0){
-        async("<%= url%><%= config.root%>js/jquery.tagcloud.js",function(){
+    if ($('#tag_cloud').length !== 0) {
+        async("<%= url%><%= config.root%>js/jquery.tagcloud.js", function () {
             $.fn.tagcloud.defaults = {
                 //size: {start: 1, end: 1, unit: 'em'},
-                color: {start: '#bbbbee', end: '#0085a1'},
+                color: { start: '#bbbbee', end: '#0085a1' },
             };
             $('#tag_cloud a').tagcloud();
         })
@@ -175,61 +175,56 @@
 <% if (theme.enable_valine && theme.enable_leancounter) {%>
 <script>
 
-if(!AV.applicationId)
-{
-AV.init({
-  appId: '<%= theme["leancloud_appid"] %>',
-  appKey: '<%= theme["leancloud_appkey"] %>'
-});
-}
-function createNewCounter()
-{
- // 声明一个 Counter 类型
-  var Counter = AV.Object.extend('Counter');
-  // 新建一个 Counter 对象
-  var counter = new Counter();
-  console.log(document.URL);
-  counter.set('title', document.URL);
-  counter.set('counter', 0);
-  counter.save().then(function (counter) {
-    // 成功保存之后，执行其他逻辑.
-    console.log('New object created with objectId: ' + counter.id);
-  }, function (error) {
-    // 异常处理
-    console.error('Failed to create new object, with error message: ' + error.message);
-  });
-}
-function showPageView()
-{
-  var query = new AV.Query('Counter');
-  query.equalTo('title', document.URL);
-  query.find().then(function (results) {
-      if(results.length > 0)
-	  {
-	  var cnt=results[0].get('counter');
-	  results[0].increment('counter');
-	  results[0].save().then(function (counter) {});
-	  document.getElementById('leancounter').innerHTML=''+(cnt+1);
-	  }
-	  else
-	  {
-	  createNewCounter();
-	   document.getElementById('leancounter').innerHTML=1;
-	  }
-  }, function (error) {
-      
-	 console.error('Failed to find object, with error message: ' + error.message);
-  });
-    
-}
-showPageView();
+    if (!AV.applicationId) {
+        AV.init({
+            appId: '<%= theme["leancloud_appid"] %>',
+            appKey: '<%= theme["leancloud_appkey"] %>'
+        });
+    }
+    function createNewCounter() {
+        // 声明一个 Counter 类型
+        var Counter = AV.Object.extend('Counter');
+        // 新建一个 Counter 对象
+        var counter = new Counter();
+        console.log(document.URL);
+        counter.set('title', document.URL);
+        counter.set('counter', 0);
+        counter.save().then(function (counter) {
+            // 成功保存之后，执行其他逻辑.
+            console.log('New object created with objectId: ' + counter.id);
+        }, function (error) {
+            // 异常处理
+            console.error('Failed to create new object, with error message: ' + error.message);
+        });
+    }
+    function showPageView() {
+        var query = new AV.Query('Counter');
+        query.equalTo('title', document.URL);
+        query.find().then(function (results) {
+            if (results.length > 0) {
+                var cnt = results[0].get('counter');
+                results[0].increment('counter');
+                results[0].save().then(function (counter) { });
+                document.getElementById('leancounter').innerHTML = '' + (cnt + 1);
+            }
+            else {
+                createNewCounter();
+                document.getElementById('leancounter').innerHTML = 1;
+            }
+        }, function (error) {
+
+            console.error('Failed to find object, with error message: ' + error.message);
+        });
+
+    }
+    showPageView();
 </script>
 <% } %>
 <!--fastClick.js -->
 <script>
-    async("https://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function(){
+    async("https://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function () {
         var $nav = document.querySelector("nav");
-        if($nav) FastClick.attach($nav);
+        if ($nav) FastClick.attach($nav);
     })
 </script>
 
@@ -243,10 +238,12 @@ showPageView();
     var _gaDomain = '<%= theme.ga_domain %>';
 
     // Originial
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', _gaId, _gaDomain);
     ga('send', 'pageview');
@@ -263,13 +260,11 @@ showPageView();
 
     // Originial
     var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "//hm.baidu.com/hm.js?" + _baId;
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?" + _baId;
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
     })();
 </script>
 <% } %>
-
-
